agregada pagina de cotacto

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.3",
     "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
@@ -24,13 +25,16 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.0",
     "@fortawesome/free-solid-svg-icons": "^5.1.0",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
+    "add": "^2.0.6",
     "angularfire2": "^5.0.0-rc.11",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "firebase": "^5.2.0",
     "font-awesome": "^4.7.0",
     "moment": "^2.22.2",
+    "npm": "^6.1.0",
     "rxjs": "^6.0.0",
+    "yarn": "^1.7.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
