--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.1.1",
     "@fortawesome/free-solid-svg-icons": "^5.1.1",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
     "add": "^2.0.6",
     "angularfire2": "^5.0.0-rc.11",
     "bootstrap": "^4.1.1",
